0.621
 Feature: Added CommandBook banlist (bans.csv) support to /Import.
 Feature: Added a way to list all players of a certain rank with "/Info @ClassName".
 Fix: Fixed changes to DefaultBackupInterval config key not being applied.
 Fix: Fixed /BanInfo showing "players on same IP" for players without a recorded IP address.
 Fix: Fixed a missing feedback message in /WSet.
 Fix: Fixed /WSet only saving the first word of the greeting message.
 Fix: Fixed fCraft occasionally using localized datetime and number formatting.
 Fix: Fixed /Cut storing the selected blocks before checking player's draw limit (thanks ruggedbear).
 Fix: Fixed /Fill2D starting a selection even if command parameters could not be parsed (thanks David00143).
 Fix: Fixed /Copy and /Cut reporting incorrect origin information (thanks nope__avi).
 Fix: Players who are spectating or being spectated by you are no longer hidden from the tab player list (thanks ruggedbear).
 Change: Small improvements and fixes to AntiSpam functionality.
 Change: Sped up PlayerDB loading on startup.
 Change: Added shortcuts for /SetInfo field names.

0.620
 Feature: WoM Direct description and flags can now be set from config, without the need to go to WoM Direct website.
 Feature: Added a new /WSet command, that allows hiding worlds, changing backup settings, and setting greeting messages.
 Feature: More /WInfo information is persisted across server restarts: IsLocked, LockedBy, UnlockedBy, LoadedBy, LoadedOn, MapChangedBy, MapChangedOn.
 Feature: Added IRCStripMinecraftColors config key (default: true). It determines whether Minecraft colorcodes (ampersand codes) entered on IRC should be removed before showing the message in-game.
 Fix: Fixed incorrect percentages occasional being printed by /Measure, /Cancel, and /Undo.
 Fix: Locked worlds remain locked after server restart.
 Fix: Addressed many flaws and glitches in the backup system.